<resources>
    <string name="app_name">Video covert to audio</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="next">Next</string>
    <string name="permission">Permission</string>
    <string name="continue_1">Continue</string>
    <string name="storage">Storage</string>
    <string name="notification">Notification</string>
    <string name="video_convert_to_mp3">Video convert to MP3</string>
    <string name="requires_permission_to_use_location">requires permission to use location</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="set_permissions_in_settings">Set Permissions In Settings</string>
    <string name="you_must_grant_permission">You must grant permission</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_to_audio">Video to Audio</string>
    <string name="video">Video</string>
    <string name="video_cutter">Video Cutter</string>
    <string name="video_merger">Video Merger</string>
    <string name="video_speed">Video Speed</string>
    <string name="audio">Audio</string>
    <string name="audio_cutter">Audio Cutter</string>
    <string name="audio_merger">Audio Merger</string>
    <string name="audio_speed">Audio Speed</string>
    <string name="audio_converter">Audio Converter</string>
    <string name="settings">Settings</string>
    <string name="output_path">Output Path</string>
    <string name="storage_emulated_0_music_wellyvoicechanger">/storage/emulated/0/music/ WellyVoiceChanger</string>
    <string name="storage_emulated_0_video_wellyvoicechanger">/storage/emulated/0/Video/ WellyVoiceChanger</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="do_you_like_the_app">Do you like the app</string>
    <string name="exit">Exit</string>
    <string name="rate">Rate</string>
    <string name="zero_start_title">Do you like the app?</string>
    <string name="one_start_title">Oh, no!</string>
    <string name="four_start_title">We love you too!</string>
    <string name="zero_start">Let us know your experience</string>
    <string name="one_start">Please give us some feedback</string>
    <string name="four_start">Thanks for your feedback</string>
    <string name="please_give_a_review">Please give a review</string>
    <string name="successful"> Rate Successful</string>
    <string name="select_video">Select Video</string>
    <string name="_23_06">23:06</string>
    <string name="selected">Selected</string>
    <string name="_00_00_kb">/00,00 KB</string>
    <string name="compressed">Compressed</string>
    <string name="_00_01">00:01</string>
    <string name="_27_84_kb">27,84 KB</string>
    <string name="click_the_button_below_to_start_converting_video_to_audio">Click the button below to start converting video to audio</string>
    <string name="convert">Convert</string>
    <string name="video_to_mp3">Video to Mp3</string>
    <string name="multifile_convert">MultiFile Convert</string>
    <string name="convert_to_mp3">Convert to MP3</string>
    <string name="you_must_choose_1_video">You must choose 1 video</string>
    <string name="you_must_choose_1_file">You must choose 1 file</string>
    <string name="saved">Saved</string>
    <string name="congratulations_you_have_successfully_converted_video_to_audio">Congratulations, you have successfully converted video to audio</string>
    <string name="format">Format</string>
    <string name="mp3">MP3</string>
    <string name="acc">AAC</string>
    <string name="wma">WMA</string>
    <string name="flac">FLAC</string>
    <string name="wav">WAV</string>
    <string name="ac3">AC3</string>
    <string name="ogg">OGG</string>
    <string name="done">Done</string>
    <string name="set_as">Set as</string>
    <string name="share">Share</string>
    <string name="_19_jan_2024">19 Jan 2024</string>
    <string name="duration_00_23_01">Duration: </string>
    <string name="_00_46_2">00:46.2</string>
    <string name="_0_5x">1x</string>
    <string name="mute">Mute :</string>
    <string name="_02_56">02:56</string>
    <string name="processing">Processing...</string>
    <string name="we_are_exporting_your_files_please_don_t_quit">We are exporting your files... Please don’t quit!</string>
    <string name="changing_video_speed_failed">Changing video speed failed</string>
    <string name="changed_video_speed_successfully">Changed video speed successfully</string>
    <string name="error_when_converting_video_speed">Error when converting video speed</string>
    <string name="save">Save</string>
    <string name="original">Original</string>
    <string name="multimedia">Multimedia</string>
    <string name="merge_style">Merge Style</string>
    <string name="sound">Sound</string>
    <string name="sequence">Sequence</string>
    <string name="left_and_right">Left and Right</string>
    <string name="up_and_down">Up and Down</string>
    <string name="_26_6_seconds">26.6 seconds</string>
    <string name="multimedia_file">Multimedia File</string>
    <string name="you_can_only_choose_2_items">You can only choose 2 items</string>
    <string name="please_enter_the_correct_time">Please enter the correct time</string>
    <string name="oh_no">Oh no!</string>
    <string name="you_don_t_have_any_content_yet_create_a_new_audio_now">You don\'t have any content yet, create a new audio now.</string>
    <string name="select_items">Select items</string>
    <string name="all">All</string>
    <string name="rename">Rename</string>
    <string name="change_the_filename_to_your_desired_syntax">Change the filename to your desired syntax.</string>
    <string name="enter_name">Enter Name</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="do_you_really_want_to_delete_this_file_from_the_list">Do you really want to delete this file from the list?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ringtone">Ringtone</string>
    <string name="merger">Merger</string>
    <string name="video_convert">Video Converter</string>
    <string name="you_must_choose_the_right_time">You must choose the right time</string>
    <string name="alarm">Alarm</string>
    <string name="play_sound">Play Sound</string>
    <string name="song">Song</string>
    <string name="video_converter">Video Converter</string>
    <string name="_00">00</string>
    <string name="_3_audio_files">3 audio files</string>
    <string name="safe_sound"><![CDATA[Safe & Sound]]></string>
    <string name="the_file_already_exists_please_enter_a_different_name">The file already exists, please enter a different name</string>
    <string name="set_ringtone_successfully">Set ringtone successfully</string>
    <string name="you_don_t_have_any_content_yet_create_a_new_video_now">You don\'t have any content yet, create a new video now.</string>
    <string name="time_reaches_its_maximum_value">Time reaches its maximum value</string>
    <string name="time_to_reach_minimum_value">Time to reach minimum value</string>
    <string name="there_are_no_items_to_convert">There are no items to convert</string>
    <string name="_3gp">3GP</string>
    <string name="mp4">MP4</string>
    <string name="mov">MOV</string>
    <string name="flv">FLV</string>
    <string name="mkv">MKV</string>
    <string name="avi">AVI</string>
    <string name="m4v">M4V</string>
    <string name="mts">MTS</string>
    <string name="m2ts">M2TS</string>
    <string name="ts">TS</string>
    <string name="you_must_choose_2_or_more_items">You must choose 2 or more items</string>
    <string name="about_us">About Us</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="items_cannot_be_deleted_you_need_at_least_2_items_to_convert">Items cannot be deleted, you need at least 2 items to convert</string>
    <string name="items_cannot_be_deleted_you_need_at_least_1_items_to_convert">Items cannot be deleted, you need at least 1 items to convert</string>
    <string name="_0_kb">0 KB</string>
    <string name="adjust_audio">Adjust audio</string>
    <string name="feel_free_to_adjust_mp3_according_to_your_needs_cut_merge_convert">Feel free to adjust mp3 according to your needs: cut, merge, convert,...</string>
    <string name="create_impressive_videos">Create impressive videos</string>
    <string name="supports_features_like_trim_merge_reduce_speed">Supports features like trim, merge, reduce speed,...</string>
    <string name="convert_video_to_mp3">Convert video to MP3</string>
    <string name="easy_and_fast">easy and fast</string>
    <string name="select_audio">Select Audio</string>
    <string name="you_must_choose_a_format">You must choose a format</string>
    <string name="_00_00">00:00</string>
    <string name="version">Version: </string>
    <string name="starttime_must_be_greater_than_0">Cut time must be greater than 0</string>
</resources>