<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/imv_bg_dialog">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rename"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/change_the_filename_to_your_desired_syntax"
            android:textColor="#999999"
            android:gravity="center"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


        <EditText
            android:id="@+id/edtRename"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edt_rename"
            android:paddingHorizontal="10dp"
            android:text="@string/enter_name"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:textColor="@color/text_dialog"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="#C2C2C2"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            app:layout_constraintHorizontal_bias=".65"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtRename"
            app:layout_constraintVertical_bias=".2" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/color_language"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>